--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "maquetado-sodimac",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/sofianeyra/Maquetado-Sodimac",
   "dependencies": {
     "bootstrap": "^4.3.1",
     "react": "^16.9.0",
@@ -11,6 +12,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+   "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
